--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -48,6 +50,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-three/drei": "^9.113.0",
+    "@react-three/fiber": "^8.17.7",
     "@tanstack/react-table": "^8.10.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -72,12 +76,14 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^5.3.0",
     "recharts": "^2.12.7",
     "sharp": "^0.32.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0",
     "typescript": "5.2.2",
     "uploadthing": "^5.7.4",
     "uuid": "^9.0.1",
