--- a/package.json
+++ b/package.json
@@ -66,11 +66,13 @@
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
     "framer-motion": "^11.5.6",
+    "jest-mock-extended": "^4.0.0-beta1",
     "lucide-react": "^0.291.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.12",
+    "node-mocks-http": "^1.16.0",
     "postcss": "8.4.28",
     "prisma": "^5.19.1",
     "react": "^18.2.0",
