--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -9,7 +9,10 @@
     "strict": true,
     "moduleResolution": "node",
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", ".next"]
