--- a/package.json
+++ b/package.json
@@ -73,9 +73,10 @@
     "postcss": "8.4.28",
     "prisma": "^5.19.1",
     "react": "^18.2.0",
+    "react-datepicker": "^7.4.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "recharts": "^2.12.7",
     "sharp": "^0.32.5",
