--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "next lint",
     "format": "prettier . --write",
     "prepare": "husky",
-    "test": "jest"
+    "test": "NODE_ENV=test jest --env-file=.env.test"
   },
   "lint-staged": {
     "**/*": [
@@ -74,7 +74,7 @@
     "nextjs-toploader": "^1.6.12",
     "node-mocks-http": "^1.16.0",
     "postcss": "8.4.28",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
@@ -83,6 +83,7 @@
     "recharts": "^2.12.7",
     "sharp": "^0.32.5",
     "sonner": "^1.5.0",
+    "supertest": "^7.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -94,6 +95,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "husky": "^9.0.11",
