--- a/.github/workflow/ci.yaml
+++ b/.github/workflow/ci.yaml
@@ -3,12 +3,10 @@ name: CI Workflow
 on:
   push:
     branches:
-      - main
-      - develop
+      - unittest_v1
   pull_request:
     branches:
-      - main
-      - develop
+      - unittest_v1
 
 jobs:
   build-and-test:
