MORE TEST CASES

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,8 @@
-DATABASE_URL=postgresql://neondb_owner:XdOskC5hjFr2@ep-hidden-king-a1qoas8z.ap-southeast-1.aws.neon.tech/wfhdatabasetest?sslmode=require
+
+DATABASE_URL="postgresql://postgres.mxtpmxgfnooxslxiqykl:zZYNt11fciCsqtph@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+
+# Direct connection to the database. Used for migrations.
+
+
+
