--- a/package.json
+++ b/package.json
@@ -108,21 +108,27 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "babel-jest": "^29.7.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^15.2.7",
+    "node-fetch": "^3.3.2",
     "node-mocks-http": "^1.16.1",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.20.0",
     "react-email": "3.0.1",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "whatwg-fetch": "^3.6.20"
   }
 }
