--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "commonjs",
+    "module": "ESNext",
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "skipLibCheck": true,
