--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,30 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Install dependencies
         run: npm install
+
       - name: Test and coverage
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: npm test -- --coverage
+
+      # Test upload coverage
+      - name: Upload Coverage
+        if: success()
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage
+          path: coverage
+
+      # USe vcoverage for SonarCLoud
+      - name: Download Coverage Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage
+          path: coverage
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
@@ -31,6 +49,7 @@ jobs:
           args: >
             -Dsonar.projectKey=SPMGroup7Key
             -Dsonar.organization=rayngjx
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
   # build-and-test:
   #   runs-on: ubuntu-latest
