--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,9 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
       # Check SonarCloud Quality Gate Status
+      - name: Wait for SonarCloud Quality Gate
+        run: sleep 25
+
       - name: Check Quality Gate
         env:
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
@@ -121,3 +124,22 @@ jobs:
 
 #            -Dsonar.exclusions=__test__/**,tests/**,test/**
 
+# jobs:
+#   sonarcloud:
+#     name: SonarCloud Scan Test
+#     runs-on: ubuntu-latest
+#     steps:
+#       # [Include the previous sonarcloud job steps here as shown above]
+
+#   deploy:
+#     name: Deploy to Vercel
+#     runs-on: ubuntu-latest
+#     needs: sonarcloud  # This makes the deployment conditional on the sonarcloud job passing
+#     if: success()  # This ensures that deployment only runs if all previous jobs succeeded
+#     steps:
+#       - name: Deploy to Vercel
+#         env:
+#           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+#         run: |
+#           # Use the Vercel CLI to deploy
+#           npx vercel --prod --token=$VERCEL_TOKEN
