--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,19 +52,34 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
       # Check SonarCloud Quality Gate Status
-      - name: Wait for SonarCloud Quality Gate
-        run: sleep 25
-
       - name: Check Quality Gate
         env:
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
         run: |
-          status=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key" | jq -r .projectStatus.status)
-          echo "Quality Gate status: $status"
-          if [ "$status" != "OK" ]; then
-            echo "Quality Gate failed"
-            exit 1
-          fi
+          max_retries=10
+          delay=15
+          count=0
+
+          while [ "$count" -lt "$max_retries" ]; do
+            status=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key" | jq -r .projectStatus.status)
+            echo "Attempt $((count+1)): Quality Gate status: $status"
+            
+            if [ "$status" == "OK" ]; then
+              echo "Quality Gate passed"
+              exit 0
+            elif [ "$status" == "ERROR" ]; then
+              echo "Quality Gate failed"
+              exit 1
+            else
+              echo "Quality Gate status is not available yet, retrying in $delay seconds..."
+              sleep $delay
+            fi
+            
+            count=$((count+1))
+          done
+
+          echo "Quality Gate status did not become available in time."
+          exit 1
 
   # build-and-test:
   #   runs-on: ubuntu-latest
