--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,44 +51,74 @@ jobs:
       #       -Dsonar.organization=rayngjx
       #       -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-      - name: Get Analysis ID and Check Quality Gate Status
+      # - name: Get Analysis ID and Check Quality Gate Status
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
+      #   run: |
+      #     max_retries=3   # Reduced retry count for faster checks
+      #     delay=5         # Reduced delay for quicker retries
+      #     count=0
+
+      #     # Fetch the latest analysis ID for the branch
+      #     analysisId=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/project_analyses/search?project=SPMGroup7Key&branch=rayTest" | jq -r '.analyses[0].key')
+      #     echo "Analysis ID: $analysisId"
+
+      #     if [ -z "$analysisId" ] || [ "$analysisId" == "null" ]; then
+      #       echo "Failed to retrieve analysis ID."
+      #       exit 1
+      #     fi
+
+      #     while [ "$count" -lt "$max_retries" ]; do
+      #       # Check the task status
+      #       taskStatus=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/ce/task?id=$analysisId" | jq -r .task.status)
+      #       echo "Attempt $((count+1)): Analysis task status: $taskStatus"
+
+      #       if [ "$taskStatus" == "SUCCESS" ]; then
+      #         # If analysis is complete, check the Quality Gate status
+      #         status=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key" | jq -r .projectStatus.status)
+      #         echo "Quality Gate status: $status"
+
+      #         if [ "$status" == "OK" ]; then
+      #           echo "Quality Gate passed"
+      #           exit 0
+      #         elif [ "$status" == "ERROR" ]; then
+      #           echo "Quality Gate failed"
+      #           exit 1
+      #         else
+      #           echo "Quality Gate status is not available yet, retrying in $delay seconds..."
+      #         fi
+      #       else
+      #         echo "Analysis not complete yet, retrying in $delay seconds..."
+      #       fi
+
+      #       count=$((count+1))
+      #       sleep $delay
+      #     done
+
+      #     echo "Quality Gate status did not become available in time."
+      #     exit 1
+
+      - name: Check Quality Gate for short live branches
         env:
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
         run: |
-          max_retries=3   # Reduced retry count for faster checks
-          delay=5         # Reduced delay for quicker retries
+          max_retries=3   # Adjust retry count for faster checks
+          delay=5         # Adjust delay for quicker retries
           count=0
 
-          # Fetch the latest analysis ID for the branch
-          analysisId=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/project_analyses/search?project=SPMGroup7Key&branch=rayTest" | jq -r '.analyses[0].key')
-          echo "Analysis ID: $analysisId"
-
-          if [ -z "$analysisId" ] || [ "$analysisId" == "null" ]; then
-            echo "Failed to retrieve analysis ID."
-            exit 1
-          fi
-
           while [ "$count" -lt "$max_retries" ]; do
-            # Check the task status
-            taskStatus=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/ce/task?id=$analysisId" | jq -r .task.status)
-            echo "Attempt $((count+1)): Analysis task status: $taskStatus"
+            # Fetch the Quality Gate status
+            status=$(curl -s -u "$SONAR_TOKEN:" "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key&branch=rayTest" | jq -r .projectStatus.status)
+            echo "Attempt $((count+1)): Quality Gate status: $status"
 
-            if [ "$taskStatus" == "SUCCESS" ]; then
-              # If analysis is complete, check the Quality Gate status
-              status=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key" | jq -r .projectStatus.status)
-              echo "Quality Gate status: $status"
-
-              if [ "$status" == "OK" ]; then
-                echo "Quality Gate passed"
-                exit 0
-              elif [ "$status" == "ERROR" ]; then
-                echo "Quality Gate failed"
-                exit 1
-              else
-                echo "Quality Gate status is not available yet, retrying in $delay seconds..."
-              fi
+            if [ "$status" == "OK" ]; then
+              echo "Quality Gate passed"
+              exit 0
+            elif [ "$status" == "ERROR" ]; then
+              echo "Quality Gate failed"
+              exit 1
             else
-              echo "Analysis not complete yet, retrying in $delay seconds..."
+              echo "Quality Gate status is not available yet, retrying in $delay seconds..."
             fi
 
             count=$((count+1))
