--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,32 +13,32 @@ jobs:
     name: SonarCloud Scan Test
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v2
-      #   with:
-      #     fetch-depth: 0
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-      # - name: Install dependencies
-      #   run: npm install
+      - name: Install dependencies
+        run: npm install
 
-      # - name: Test and coverage
-      #   env:
-      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      #   run: npm test -- --coverage
+      - name: Test and coverage
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        run: npm test -- --coverage
 
-      # # Upload coverage report
-      # - name: Upload Coverage
-      #   if: success()
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: code-coverage
-      #     path: coverage
+      # Upload coverage report
+      - name: Upload Coverage
+        if: success()
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage
+          path: coverage
 
-      # # Download coverage artifact for SonarCloud
-      # - name: Download Coverage Artifact
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: code-coverage
-      #     path: coverage
+      # Download coverage artifact for SonarCloud
+      - name: Download Coverage Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage
+          path: coverage
 
       # - name: SonarCloud Scan
       #   uses: SonarSource/sonarcloud-github-action@master
@@ -98,41 +98,42 @@ jobs:
       #     echo "Quality Gate status did not become available in time."
       #     exit 1
 
-      # - name: Check Quality Gate for short live branches
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
-      #   run: |
-      #     max_retries=3   # Adjust retry count for faster checks
-      #     delay=5         # Adjust delay for quicker retries
-      #     count=0
-
-      #     while [ "$count" -lt "$max_retries" ]; do
-      #       # Fetch the Quality Gate status
-      #       status=$(curl -s -u "$SONAR_TOKEN:" "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key&branch=rayTest" | jq -r .projectStatus.status)
-      #       echo "Attempt $((count+1)): Quality Gate status: $status"
-
-      #       if [ "$status" == "OK" ]; then
-      #         echo "Quality Gate passed"
-      #         exit 0
-      #       elif [ "$status" == "ERROR" ]; then
-      #         echo "Quality Gate failed"
-      #         exit 1
-      #       else
-      #         echo "Quality Gate status is not available yet, retrying in $delay seconds..."
-      #       fi
-
-      #       count=$((count+1))
-      #       sleep $delay
-      #     done
-
-      #     echo "Quality Gate status did not become available in time."
-      #     exit 1
-      - name: Trigger Vercel Deploy
-        # if: success()
+      - name: Check Quality Gate for short live branches
         env:
-          DEPLOY_HOOK_URL: ${{ secrets.VERCEL_DEPLOY_HOOK_URL }}
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
         run: |
-          curl -X POST "$DEPLOY_HOOK_URL"
+          max_retries=3   # Adjust retry count for faster checks
+          delay=5         # Adjust delay for quicker retries
+          count=0
+
+          while [ "$count" -lt "$max_retries" ]; do
+            # Fetch the Quality Gate status
+            status=$(curl -s -u "$SONAR_TOKEN:" "https://sonarcloud.io/api/qualitygates/project_status?projectKey=SPMGroup7Key&branch=rayTest" | jq -r .projectStatus.status)
+            echo "Attempt $((count+1)): Quality Gate status: $status"
+
+            if [ "$status" == "OK" ]; then
+              echo "Quality Gate passed"
+              exit 0
+            elif [ "$status" == "ERROR" ]; then
+              echo "Quality Gate failed"
+              exit 1
+            else
+              echo "Quality Gate status is not available yet, retrying in $delay seconds..."
+            fi
+
+            count=$((count+1))
+            sleep $delay
+          done
+
+          echo "Quality Gate status did not become available in time."
+          exit 1
+  deploy:
+    - name: Trigger Vercel Deploy
+      if: success()
+      env:
+        DEPLOY_HOOK_URL: ${{ secrets.VERCEL_DEPLOY_HOOK_URL }}
+      run: |
+        curl -X POST "$DEPLOY_HOOK_URL"
   # build-and-test:
   #   runs-on: ubuntu-latest
 
