--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx",
-    "__test__/**/*.ts", // Add this line if your tests are TypeScript
-    ".next/types/**/*.ts"
+    "**/*.tsx"
+    // "__test__/**/*.ts", // Add this line if your tests are TypeScript
+    // ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "__test__"]
 }
