--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Lint
-        run: npm run lint
+      # - name: Run Lint
+      #   run: npm run lint
 
       - name: Run Prettier
         run: npm run prettier -- --check
