--- a/package.json
+++ b/package.json
@@ -70,10 +70,13 @@
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
     "critters": "^0.0.25",
+    "cross-fetch": "^4.0.0",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
     "express": "^4.21.0",
+    "file-api": "^0.10.4",
+    "form-data": "^4.0.1",
     "formidable": "^3.5.1",
     "framer-motion": "^11.5.6",
     "jest-mock-extended": "^4.0.0-beta1",
@@ -117,6 +120,8 @@
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.5",
+    "formdata-node": "^6.0.3",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
